# scrubdf

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
scrubdf/: __init__.py  cleaning.py  eda.py  io.py  kpi.py  profiles.py  utils.py
tests/: conftest.py  test_cleaning.py  test_eda.py  test_io.py  test_kpi.py  test_profiles.py
